# NetChat_userver

./: .gitignore  README.md  project_X.md
client/: README.md  install_build_linux.sh  install_build_windows.sh
client/clientGui/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
server/: README.md
server/server_template/: CMakeLists.txt  CMakePresets.json  Makefile
server/server_template/configs/: static_config.yaml
server/server_template/src/: hello.cpp  hello.hpp  hello_benchmark.cpp  hello_test.cpp  main.cpp
server/server_template/tests/: test_basic.py
